force-app/main/default/objects/TabelaDeComissao__c/TabelaDeComissao__c.object-meta.xml
<CustomObject>
    <label>Tabela de Comissão</label>
    <nameField>
        <label>Tabela de Comissão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabela De Comissão</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>