force-app/main/default/objects/TabelaDeComissao__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define se a tabela de comissão estará ativa ou não.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>