force-app/main/default/objects/TabelaDeComissao__c/fields/EndOfTerm__c.field-meta.xml
<CustomField>
    <fullName>EndOfTerm__c</fullName>
    <label>Vigência Fim</label>
    <type>Date</type>
</CustomField>