force-app/main/default/objects/TabelaDeComissao__c/fields/Indication__c.field-meta.xml
<CustomField>
    <fullName>Indication__c</fullName>
    <label>Indicação</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>