force-app/main/default/objects/TabelaDeComissao__c/fields/Percentual_da_Comiss_o_Imobili_ria__c.field-meta.xml
<CustomField>
    <fullName>Percentual_da_Comiss_o_Imobili_ria__c</fullName>
    <label>Percentual da Comissão - Imobiliária</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>