force-app/main/default/objects/TabelaDeComissao__c/fields/PercentualDaComissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualDaComissao__c</fullName>
    <label>Percentual da Comissão - Incorporadora</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>