force-app/main/default/objects/TabelaDeComissao__c/fields/PrizePercentage__c.field-meta.xml
<CustomField>
    <fullName>PrizePercentage__c</fullName>
    <label>Percentual - Prêmio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>