force-app/main/default/objects/TabelaDeComissao__c/fields/RealStateComissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>RealStateComissionPercentage__c</fullName>
    <label>Percentual da Comissão - Imobiliária</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>