force-app/main/default/objects/TabelaDeComissao__c/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <label>Canal de Venda</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesChannel</valueSetName>
    </valueSet>
</CustomField>