force-app/main/default/objects/TabelaDeComissao__c/fields/SalesTable__c.field-meta.xml
<CustomField>
    <fullName>SalesTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Tabela de Comissão</relationshipLabel>
    <relationshipName>ComissionTableSalesTable</relationshipName>
    <type>Lookup</type>
</CustomField>