force-app/main/default/objects/TabelaDeComissao__c/fields/StartOfTerm__c.field-meta.xml
<CustomField>
    <fullName>StartOfTerm__c</fullName>
    <label>Vigência Início</label>
    <type>Date</type>
</CustomField>