force-app/main/default/objects/TabelaDeComissao__c/fields/TabelaDeVenda__c.field-meta.xml
<CustomField>
    <fullName>TabelaDeVenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>TabelaDeComissao</relationshipLabel>
    <relationshipName>TabelaDeComissao</relationshipName>
    <type>Lookup</type>
</CustomField>