force-app/main/default/objects/TabelaDeComissao__c/fields/ViginciaInicio__c.field-meta.xml
<CustomField>
    <fullName>ViginciaInicio__c</fullName>
    <label>Vigência Início</label>
    <type>Date</type>
</CustomField>